AC-134 Fixed alignment of preview and edit buttons at 1366px and also set the widths to the buttons (preview, edit and actions) so they do not wrap or change size when browser is smaller than 1366px)

--- a/app/assets/stylesheets/app.less
+++ b/app/assets/stylesheets/app.less
@@ -1456,6 +1456,7 @@ fieldset[disabled] .btn-success.active {
 .search-results{
     padding-top: 90px;
     .btn-edit{
+        min-width:42px;
         &:hover{
           color: #fff;
           background: #337ab7;
@@ -1464,7 +1465,7 @@ fieldset[disabled] .btn-success.active {
 
     }
     .btn-preview{
-
+        min-width:65px;
         &:hover{
           color: #fff;
           background: #f0ad4e;
@@ -1473,6 +1474,9 @@ fieldset[disabled] .btn-success.active {
     }
 }
 
+.btn-action{
+    min-width: 60px;
+}
 .modal-backdrop{
     background-color: rgba(0, 0, 0, 0.6);
 }
